crates/swc_ecma_parser/tests/test262-error-references/fail/f8941121f644c8c0.js.stderr
error: Destructuring bindings require initializers
 --> $DIR/tests/test262-parser/fail/f8941121f644c8c0.js:1:5
  |
1 | var {a};
  |     ^^^

